# proton-over-tailscale-proxy

./: .env.example  .gitignore  AGENTS.md  README.md  README_EN.md  README_JA.md  docker-compose.yml  mise.toml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  entrypoint.ts  supervisord.conf  wireguard-setup.sh
docker/config/: dante.conf  tinyproxy.conf
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigView.tsx  ControlButtons.tsx  LogViewer.tsx  StatusPanel.tsx
frontend/src/hooks/: useApi.ts  useLogs.ts
frontend/src/types/: index.ts
rust-backend/: Cargo.toml  Dockerfile  docker-entrypoint.sh
rust-backend/src/: error.rs  lib.rs  main.rs
rust-backend/src/models/: mod.rs
rust-backend/src/routes/: action.rs  config.rs  connection.rs  health.rs  logs.rs  mod.rs  status.rs
rust-backend/src/services/: config.rs  docker.rs  mod.rs
